Improve payment failure messages for clarity and guidance

--- a/index.html
+++ b/index.html
@@ -552,12 +552,12 @@
         label: 'Payment declined by the issuing bank',
         portalAllowed: true,
         fr: {
-          reasonLine: 'Raison de l’échec du paiement : La banque a peut‑être refusé la transaction.',
-          secondBullet: 'Votre banque a peut‑être refusé le paiement. Nous vous conseillons de la contacter.'
+          reasonLine: 'Raison de l\'échec du paiement : La banque a peut‑être refusé la transaction.',
+          secondBullet: 'Votre banque a peut‑être refusé le paiement. Nous vous conseillons de la contacter pour vérifier le paiement.'
         },
         en: {
           reasonLine: 'Reason for Payment Failure: The bank may have declined the transaction.',
-          secondBullet: 'Your bank may have declined the payment. Please contact them to verify.'
+          secondBullet: 'Your bank may have declined the payment. Please contact them to verify the payment.'
         }
       },
       {
